force-app/main/default/objects/Document_Template__c/fields/Background_Hex_Code__c.field-meta.xml
<CustomField>
    <fullName>Background_Hex_Code__c</fullName>
    <label>Background Hex Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>