force-app/main/default/objects/Document_Template__c/fields/Borders_Dividers_Hex_Code__c.field-meta.xml
<CustomField>
    <fullName>Borders_Dividers_Hex_Code__c</fullName>
    <label>Borders &amp; Dividers Hex Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>