force-app/main/default/objects/Document_Template__c/fields/Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text__c</fullName>
    <label>Footer Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>