force-app/main/default/objects/Document_Template__c/fields/Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Header_Text__c</fullName>
    <label>Header Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>