force-app/main/default/objects/Document_Template__c/fields/Text_Hex_Code__c.field-meta.xml
<CustomField>
    <fullName>Text_Hex_Code__c</fullName>
    <label>Text Hex Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>